# sine-ai

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  sine_approximation.ipynb
.github/: copilot-instructions.md
sine_ai/: __init__.py  config.py  inference.py
sinus_ai/: __init__.py  config.py  data.py  inference.py  model.py  train.py
